--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ body, html {
   <div class="w3-display-center w3-text-blue" style="padding-top:200px">
    <span align="center"><span class="w3-jumbo w3-hide-small w3-font-courier">&lt;script&gt;</span><span class="w3-hide-small w3-small-and-title"> &</span><span class=" w3-hide-small w3-font-cursive"> style</span><span class="w3-jumbo w3-hide-small"> Hacks</span></span><br>
     <!--<span class="w3-xxlarge w3-hide-large w3-hide-medium">Start something that matters</span><br>-->
-    <span class="who w3-large">BY MISSION SAN JOSE HIGH SCHOOL'S GIRLS WHO CODE</span>
+    <span class="who w3-large">PARTNERED WITH MISSION SAN JOSE HIGH SCHOOL'S GIRLS WHO CODE</span>
     <p><a href="https://forms.gle/nr5CzQbmaSrY6k626" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">ATTENDEE</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://forms.gle/5aiK5uBaZkd4Wtrm7" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">VOLUNTEER</a></p><br>
     <p>Mission San Jose High School | May 16, 2020 | 8 AM - 10 PM</p>
 
