--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@ td, th {
 <!-- Team Section -->
 <div class="w3-containe w3-light-grey" style="padding:100px 16px" id="team">
   <h3 class="w3-center">team</h3>
-  <img height="900px" width="1410px" src="yearbook photo.jpg">
+  <!--<img height="900px" width="1410px" src="yearbook photo.jpg">-->
   <div class="w3-row-padding" style="margin-top:64px">
     <div class="w3-col l3 m6 w3-margin-bottom w3-white">
       <div class="w3-card">
